# elastic-tracker-GRU

./: DOC 文档.doc  Readme.md
gazebo_data/: collection_report.txt  traj_0000.csv  traj_0001.csv  traj_0002.csv  traj_0003.csv  traj_0004.csv  traj_0005.csv  traj_0006.csv  traj_0007.csv  traj_0008.csv  traj_0009.csv  traj_0010.csv  traj_0011.csv  traj_0012.csv  traj_0013.csv  traj_0014.csv  traj_0015.csv  traj_0016.csv  traj_0017.csv  traj_0018.csv  traj_0019.csv  traj_0020.csv  traj_0021.csv  traj_0022.csv  traj_0024.csv  traj_0025.csv  traj_0026.csv  traj_0027.csv  traj_0028.csv  traj_0029.csv  traj_0030.csv  traj_0031.csv  traj_0032.csv  traj_0033.csv  traj_0034.csv  traj_0035.csv  traj_0036.csv  traj_0037.csv  traj_0038.csv  traj_0039.csv  (+10 more)
glog/: Makefile  config.status  demangle_unittest  libtool  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_pie_unittest  symbolize_unittest  utilities_unittest
glog/.libs/: demangle_unittest  libglog.so.0.0.0  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_pie_unittest  symbolize_unittest  utilities_unittest
src/Elastic-Tracker/detection/gazebo_target_tracker/: CMakeLists.txt  README.md  package.xml
src/Elastic-Tracker/detection/gazebo_target_tracker/launch/: run_simple_tracker_gazebo.launch  simple_tracker.launch
src/Elastic-Tracker/detection/gazebo_target_tracker/src/: gazebo_target_tracker_node.cpp  simple_follower_node.cpp
src/Elastic-Tracker/detection/object_detection_msgs/: CMakeLists.txt
src/Elastic-Tracker/detection/onboard_detector/: CMakeLists.txt  CMakeLists（复件）.txt  package.xml
src/Elastic-Tracker/detection/onboard_detector/cfg/: single_target_param.yaml
src/Elastic-Tracker/detection/onboard_detector/include/onboard_detector/: dynamicDetector.cpp  single_target_selector.h  uvDetector.cpp
src/Elastic-Tracker/detection/onboard_detector/src/: single_target_selector_node.cpp
src/Elastic-Tracker/detection/opencv_target/: CMakeLists.txt
src/Elastic-Tracker/detection/opencv_target/include/opencv_target/: opencv_target.h
src/Elastic-Tracker/detection/opencv_target/src/: opencv_target.cpp
src/Elastic-Tracker/detection/target_ekf/: CMakeLists.txt  package.xml
src/Elastic-Tracker/detection/target_ekf/config/: camera.yaml  camera_gazebo.yaml
src/Elastic-Tracker/detection/target_ekf/src/: gazebo_target_node.cpp
src/Elastic-Tracker/mapping/: CMakeLists.txt
src/Elastic-Tracker/planning/DecompROS/catkin_simple/: CMakeLists.txt
src/Elastic-Tracker/planning/DecompROS/decomp_ros_msgs/: CMakeLists.txt
src/Elastic-Tracker/planning/DecompROS/decomp_ros_utils/: CMakeLists.txt
src/Elastic-Tracker/planning/planning/: CMakeLists.txt  package.xml
src/Elastic-Tracker/planning/planning/launch/: run_in_gazebo.launch  run_in_gazebo_gt.launch  run_simple_tracking.launch
src/Elastic-Tracker/planning/planning/src/: planning_nodelet.cpp  simple_tracker_node.cpp
src/Elastic-Tracker/planning/traj_opt/: CMakeLists.txt
src/Elastic-Tracker/pose_utils/: CMakeLists.txt
src/Elastic-Tracker/quadrotor_msgs/: CMakeLists.txt
src/Realsense2-Camera/: CMakeLists.txt
src/VINS-Fusion/camera_models/: CMakeLists.txt
src/VINS-Fusion/config/gazebo/: Drone_gazebo.yaml
src/VINS-Fusion/config/realsense_d435i/: realsense_stereo_imu_config.yaml
src/VINS-Fusion/global_fusion/: CMakeLists.txt
src/VINS-Fusion/loop_fusion/: CMakeLists.txt
src/VINS-Fusion/output/gazebo/: bias.txt  extrinsic_parameter.txt  stamped_traj_estimate.txt
src/VINS-Fusion/vins_estimator/: CMakeLists.txt
src/gazebo_extra_plugins/: CMakeLists.txt
src/gru_trajectory_prediction/: CMakeLists.txt  package.xml
src/gru_trajectory_prediction/config/: model_config.yaml
src/gru_trajectory_prediction/include/gru_trajectory_prediction/: collision_checker.hpp  gru_prediction_client.hpp  trajectory_corrector.hpp
src/gru_trajectory_prediction/launch/: prediction_node.launch  train_models.launch  visualization.launch
src/gru_trajectory_prediction/rviz/: comparison.rviz  prediction_visualization.rviz
src/gru_trajectory_prediction/scripts/: test_comparison.py
src/gru_trajectory_prediction/scripts/data/: analyze_trajectories.py  collect_gazebo_data.py  collect_gazebo_data（没有用位置记录）.py
src/gru_trajectory_prediction/scripts/inference/: gru_server.py  kalman_fusion.py
src/gru_trajectory_prediction/scripts/models/: dataset.py  student_gru.py  teacher_gru.py
src/gru_trajectory_prediction/scripts/train/: debug_training.py  step1_train_teacher.py  step2_distill_student.py  step3_prune_model.py  step4_quantize_model.py  step5_convert_torchscript.py
src/gru_trajectory_prediction/scripts/visualization/: marker_publisher.py  performance_monitor.py  trajectory_visualizer.py  uncertainty_visualizer.py
src/gru_trajectory_prediction/src/: collision_checker.cpp  gru_prediction_client.cpp  trajectory_corrector.cpp
src/simple_chase/: CMakeLists.txt  package.xml
src/simple_chase/launch/: chase_car.launch
src/simple_chase/src/: gazebo_fake_localization.cpp  simple_car_tracker.cpp
src/trajectory_prediction/: CMakeLists.txt  README.md  package.xml  run_phase1.sh
src/trajectory_prediction/checkpoints/model_v2/: best_model.pth  config.json  final_model.pth  history.json
src/trajectory_prediction/checkpoints/teacher/: config.json  final_model.pth  history.json
src/trajectory_prediction/launch/: collect_gazebo_data.launch  data_collection.launch
src/trajectory_prediction/msg/: PredictionWithUncertainty.msg  TrajectoryPrediction.msg
src/trajectory_prediction/scripts/: collect_gazebo_actor.py  evaluate_model.py  generate_synthetic_data.py  models.py  preprocess_data.py  preprocess_gazebo_data.py  train_teacher.py
src/trajectory_prediction/src/: data_collector_node.cpp
